fix: adjust z-index so back to top does not cover search results

--- a/components/ui/BackToTop/BackToTop.module.css
+++ b/components/ui/BackToTop/BackToTop.module.css
@@ -3,5 +3,5 @@
   height: 48px;
   position: fixed;
   right: var(--mantine-spacing-lg);
-  z-index: 999999;
+  z-index: 99;
 }
